--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -7,7 +7,7 @@ decorations = "Buttonless"
 option_as_alt = "OnlyLeft"
 
 [font]
-normal = { family = "SFMono Nerd Font", style = "Regular" }
+normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
 size = 13
 
 [cursor]
@@ -26,21 +26,21 @@ text = '#000000'
 background = '#b3d7ff'
 
 [colors.normal]
-black   = '#14191e'
-red     = '#b43c29'
-green   = '#00c200'
-yellow  = '#c7c400'
-blue    = '#2743c7'
+black = '#14191e'
+red = '#b43c29'
+green = '#00c200'
+yellow = '#c7c400'
+blue = '#2743c7'
 magenta = '#bf3fbd'
-cyan    = '#00c5c7'
-white   = '#c7c7c7'
+cyan = '#00c5c7'
+white = '#c7c7c7'
 
 [colors.bright]
-black   = '#676767'
-red     = '#dc7974'
-green   = '#57e690'
-yellow  = '#ece100'
-blue    = '#a6aaf1'
+black = '#676767'
+red = '#dc7974'
+green = '#57e690'
+yellow = '#ece100'
+blue = '#a6aaf1'
 magenta = '#e07de0'
-cyan    = '#5ffdff'
-white   = '#feffff'
+cyan = '#5ffdff'
+white = '#feffff'
