--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1669,7 +1669,7 @@ tab_bar_background none
 #: background_opacity. If you want to use both, you are probably
 #: better off just hiding the titlebar with hide_window_decorations.
 
-# macos_option_as_alt no
+macos_option_as_alt yes
 
 #: Use the Option key as an Alt key on macOS. With this set to no,
 #: kitty will use the macOS native Option+Key to enter Unicode
@@ -1975,8 +1975,8 @@ map cmd+v       paste_from_clipboard
 
 # map kitty_mod+enter new_window
 # map cmd+d       new_window
-map cmd+d launch --location=hsplit
-map shift+cmd+d launch --location=vsplit
+map shift+ctrl+cmd+t launch --location=hsplit
+map shift+ctrl+alt+cmd+t launch --location=vsplit
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
