--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -12,7 +12,7 @@ font_features     MonaspiceNeNFM-Bold +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 
 font_features     MonaspiceNeNFM-MediumItalic +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
 font_features     MonaspiceNeNFM-BoldItalic +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
 
-font_size 12.0
+font_size 13.0
 
 # symbol_map
 
@@ -1976,7 +1976,9 @@ map cmd+v       paste_from_clipboard
 # map kitty_mod+enter new_window
 # map cmd+d       new_window
 map shift+ctrl+cmd+t launch --location=hsplit
+map cmd+k>cmd+-   launch --location=hsplit
 map shift+ctrl+alt+cmd+t launch --location=vsplit
+map cmd+k>cmd+\   launch --location=vsplit
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
