--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2022,12 +2022,10 @@ map cmd+w close_window
 
 #: Next window
 
-# map kitty_mod+] next_window
 map cmd+]       next_window
 
 #: Previous window
 
-# map kitty_mod+[ previous_window
 map cmd+[       previous_window
 
 #: Move window forward
@@ -2118,15 +2116,11 @@ map cmd+[       previous_window
 
 #: Next tab
 
-# map kitty_mod+right next_tab
-# map shift+cmd+]     next_tab
-# map ctrl+tab        next_tab
+map shift+cmd+]     next_tab
 
 #: Previous tab
 
-# map kitty_mod+left previous_tab
-# map shift+cmd+[    previous_tab
-# map ctrl+shift+tab previous_tab
+map shift+cmd+[    previous_tab
 
 #: New tab
 
@@ -2202,24 +2196,15 @@ map cmd+t       new_tab
 
 #: Increase font size
 
-# map kitty_mod+equal  change_font_size all +2.0
-# map kitty_mod+plus   change_font_size all +2.0
-# map kitty_mod+kp_add change_font_size all +2.0
-# map cmd+plus         change_font_size all +2.0
-# map cmd+equal        change_font_size all +2.0
-# map shift+cmd+equal  change_font_size all +2.0
+map cmd+plus         change_font_size all +2.0
 
 #: Decrease font size
 
-# map kitty_mod+minus       change_font_size all -2.0
-# map kitty_mod+kp_subtract change_font_size all -2.0
-# map cmd+minus             change_font_size all -2.0
-# map shift+cmd+minus       change_font_size all -2.0
+map cmd+minus             change_font_size all -2.0
 
 #: Reset font size
 
-# map kitty_mod+backspace change_font_size all 0
-# map cmd+0               change_font_size all 0
+map cmd+0               change_font_size all 0
 
 
 #: To setup shortcuts for specific font sizes::
@@ -2478,23 +2463,43 @@ map ctrl+cmd+,   load_config_file
 
 #: Open kitty Website
 
-# map shift+cmd+/ open_url https://sw.kovidgoyal.net/kitty/
+map shift+cmd+/ open_url https://sw.kovidgoyal.net/kitty/
 
 #: Hide macOS kitty application
 
-# map cmd+h hide_macos_app
+map cmd+h hide_macos_app
 
 #: Hide macOS other applications
 
-# map opt+cmd+h hide_macos_other_apps
+map opt+cmd+h hide_macos_other_apps
 
 #: Minimize macOS window
 
-# map cmd+m minimize_macos_window
+map cmd+m minimize_macos_window
 
 #: Quit kitty
 
 map cmd+q quit
+
+#: Text editing
+
+# move word left
+map alt+left send_text all \x1B\x62
+
+# move word right
+map alt+right send_text all \x1B\x66
+
+# remove word
+map alt+backspace send_text all \x17
+
+# remove line
+map cmd+backspace send_text all \x15
+
+# move to start of line
+map cmd+left send_text all \x01
+
+# move to end of line
+map cmd+right send_text all \x05
 
 #: }}}
 
