--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1291,7 +1291,7 @@ tab_bar_background none
 
 #: Advanced {{{
 
-# shell .
+shell /opt/homebrew/bin/fish
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
