--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 
 Brewfile.lock.json
 nvim/lazy-lock.json
+
+# Ignore all files within the 'zed' folder, except the 'settings.json' file
+zed/*
+!zed/settings.json
