update kitty config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1103,8 +1103,7 @@ active_tab_font_style   bold-italic
 inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
-
-tab_bar_background none
+# tab_bar_background none
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
