--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1119,36 +1119,8 @@ inactive_tab_font_style normal
 
 #: Color scheme {{{
 
-# foreground #dddddd
-# background #000000
-
-#: The foreground and background colors.
-
-# background_opacity 0.8
-
-#: The opacity of the background. A number between zero and one, where
-#: one is opaque and zero is fully transparent. This will only work if
-#: supported by the OS (for instance, when using a compositor under
-#: X11). Note that it only sets the background color's opacity in
-#: cells that have the same background color as the default terminal
-#: background, so that things like the status bar in vim, powerline
-#: prompts, etc. still look good. But it means that if you use a color
-#: theme with a background color in your editor, it will not be
-#: rendered as transparent. Instead you should change the default
-#: background color in your kitty config and not use a background
-#: color in the editor color scheme. Or use the escape codes to set
-#: the terminals default colors in a shell script to launch your
-#: editor. Be aware that using a value less than 1.0 is a (possibly
-#: significant) performance hit. When using a low value for this
-#: setting, it is desirable that you set the background color to a
-#: color the matches the general color of the desktop background, for
-#: best text rendering.  If you want to dynamically change
-#: transparency of windows, set dynamic_background_opacity to yes
-#: (this is off by default as it has a performance cost). Changing
-#: this option when reloading the config will only work if
-#: dynamic_background_opacity was enabled in the original config.
-
-# background_blur 30
+background_opacity 0.8
+background_blur 49
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
