--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1262,7 +1262,7 @@ background_blur 49
 
 #: Advanced {{{
 
-shell /opt/homebrew/bin/fish
+shell /opt/homebrew/bin/nu
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
