Update starship config

--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -168,3 +168,8 @@ disabled = false
 
 [character]
 disabled = false
+
+[git_metrics]
+disabled = false
+added_style = 'bold blue'
+format = '[+$added]($added_style)/[-$deleted]($deleted_style) '
