--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -275,6 +275,10 @@ disable_ligatures never
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity. Set to zero to never stop blinking.
 
+cursor_trail 1
+cursor_trail_decay 0.8 1.2
+cursor_trail_start_threshold 2
+
 #: }}}
 
 #: Scrollback {{{
