Update NeoVim config

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1123,8 +1123,8 @@ inactive_tab_font_style normal
 
 #: Color scheme {{{
 
-background_opacity 0.8
-background_blur 49
+# background_opacity 0.8
+# background_blur 49
 
 #: Set to a positive value to enable background blur (blurring of the
 #: visuals behind a transparent window) on platforms that support it.
