--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,14 +2,14 @@
 
 #: Fonts {{{
 
-font_family      MonaspiceNe Nerd Font Mono Medium
+font_family      MonaspiceNe Nerd Font Mono Regular 
 bold_font        MonaspiceNe Nerd Font Mono Bold
-italic_font      MonaspiceNe Nerd Font Mono Medium Italic
+italic_font      MonaspiceNe Nerd Font Mono Italic
 bold_italic_font MonaspiceNe Nerd Font Mono Bold Italic
 
-font_features     MonaspiceNeNFM-Medium +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
+font_features     MonaspiceNeNFM-Regular +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
 font_features     MonaspiceNeNFM-Bold +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
-font_features     MonaspiceNeNFM-MediumItalic +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
+font_features     MonaspiceNeNFM-Italic +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
 font_features     MonaspiceNeNFM-BoldItalic +calt +liga +ss01 +ss02 +ss03 +ss04 +ss05 +ss06 +ss07 +ss08 +ss09
 
 font_size 13.0
