Update Zsh configuration
Introduce a new Zsh configuration file with essential options, PATH 
settings, autoload functions, and plugin sources. This enhances the 
Zsh environment by enabling features like shared history, improved 
completion, and integration with tools such as fzf, starship, and 
atuin. Remove the old configuration file to streamline setup.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 .DS_Store
 
 Brewfile.lock.json
-nvim/lazy-lock.json
 nushell/history.txt
 
-# Ignore all files within the 'zed' folder, except the 'settings.json' file
 zed/*
 !zed/settings.json
 !zed/themes
 
-!tmux/
-!tmux/**
+zsh/.zsh_history
+zsh/.zsh_sessions
+zsh/.zcompdump
+zsh/.zcompcache
+
 tmux/plugins/
