Set default shell to Zsh

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,7 +46,7 @@ set -g renumber-windows on
 set -g mouse on
 
 # Set default shell
-set-option -g default-shell /opt/homebrew/bin/nu
+# set-option -g default-shell /opt/homebrew/bin/nu
 # }}}
 
 # {{{ Visual Mode Configuration
