Fix the window name in tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,38 +2,6 @@
 # Enable folding by markers for Neovim/Vim
 # vim:foldmethod=marker
 
-# {{{ Plugin Management
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'catppuccin/tmux#v2.1.1'
-
-# Catppuccin Theme Settings
-set -g @catppuccin_flavor 'mocha' # Options: latte, frappe, macchiato, mocha
-set -g @catppuccin_window_status_style "rounded"
-run ~/.config/tmux/plugins/tmux/catppuccin.tmux
-
-# Initialize TMUX Plugin Manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-# }}}
-
-# {{{ Status Bar Customization
-# Status bar lengths
-set -g status-right-length 100
-set -g status-left-length 100
-
-# Status bar content
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
-# }}}
-
 # {{{ General Settings
 # Terminal and indexing settings
 set -g default-terminal "tmux-256color"
@@ -44,6 +12,10 @@ set -g renumber-windows on
 
 # Enable mouse support
 set -g mouse on
+
+# Window naming
+set-option -g automatic-rename on
+set-option -g automatic-rename-format ' #{b:pane_current_path}'
 
 # Set default shell
 # set-option -g default-shell /opt/homebrew/bin/nu
@@ -69,4 +41,44 @@ bind -r r select-pane -R
 # Change prefix key to C-Space
 unbind C-b
 set -g prefix C-Space
+# }}}
+
+# {{{ Theme Configuration
+
+# Catppuccin Theme Settings
+set -g @catppuccin_flavor 'mocha' # Options: latte, frappe, macchiato, mocha
+set -g @catppuccin_window_status_style "rounded"
+set -g @catppuccin_window_text " #W "
+set -g @catppuccin_window_current_text " #W "
+
+# load catppuccin theme ...
+run ~/.config/tmux/plugins/catppuccin/catppuccin.tmux
+
+# }}}
+
+# {{{ Status Bar Customization
+# Status bar lengths
+set -g status-right-length 100
+set -g status-left-length 100
+
+# Status bar content
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+# }}}
+
+# {{{ Plugin Management
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize TMUX Plugin Manager (keep this line at the very bottom of tmux.conf)
+run '~/.config/tmux/plugins/tpm/tpm'
 # }}}
