--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -235,3 +235,7 @@ run = 'layout floating'
 if.app-id = 'com.github.GitHubClient'
 run = 'layout floating'
 
+[[on-window-detected]]
+if.app-id = 'com.raycast.macos'
+run = 'layout floating'
+
