--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,7 @@
 # {{{ General Settings
 # Terminal and indexing settings
 set -g default-terminal "tmux-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ga terminal-features "xterm-256color:RGB"
 set -g base-index 1
 set -g pane-base-index 1
 set -g renumber-windows on
