--- a/aerospace/aerospace.toml
+++ b/aerospace/aerospace.toml
@@ -66,7 +66,7 @@ inner.horizontal = 0
 inner.vertical =   0
 outer.left =       0
 outer.bottom =     0
-outer.top =        [{ monitor.main = 8 }, { monitor."LG UltraFine" = 40 }, 24]
+outer.top =        0
 outer.right =      0
 
 [workspace-to-monitor-force-assignment]
