--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,10 +31,10 @@ bind -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 # {{{ Pane Navigation with UDLR Keys
 # Navigate panes using UDLR keys
-bind -r l select-pane -L
-bind -r d select-pane -D
+bind -r h select-pane -L
+bind -r j select-pane -D
 bind -r k select-pane -U
-bind -r r select-pane -R
+bind -r l select-pane -R
 # }}}
 
 # {{{ Key Bindings
