--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,46 +1,26 @@
-[shell]
-program = "/opt/homebrew/bin/fish"
+[general]
+import = [
+  "themes/catppuccin-mocha.toml",
+]
+
+[terminal]
+shell = "/bin/zsh"
 
 [window]
 padding = { x = 8, y = 8 }
 decorations = "Buttonless"
 option_as_alt = "OnlyLeft"
 
+[env]
+TERM = "xterm-256color"
+
 [font]
-normal = { family = "FiraCode Nerd Font Mono", style = "Regular" }
+normal = { family = "MonaspiceNe Nerd Font Mono", style = "Regular" }
 size = 13
 
+[selection]
+save_to_clipboard = true
+
 [cursor]
-style = { shape = "Underline", blinking = "On" }
+style = { shape = "Beam", blinking = "On" }
 
-[colors.primary]
-foreground = '#dbdbdb'
-background = '#14191e'
-
-[colors.cursor]
-text = '#000000'
-cursor = '#fefffe'
-
-[colors.selection]
-text = '#000000'
-background = '#b3d7ff'
-
-[colors.normal]
-black = '#14191e'
-red = '#b43c29'
-green = '#00c200'
-yellow = '#c7c400'
-blue = '#2743c7'
-magenta = '#bf3fbd'
-cyan = '#00c5c7'
-white = '#c7c7c7'
-
-[colors.bright]
-black = '#676767'
-red = '#dc7974'
-green = '#57e690'
-yellow = '#ece100'
-blue = '#a6aaf1'
-magenta = '#e07de0'
-cyan = '#5ffdff'
-white = '#feffff'
