--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1068,7 +1068,7 @@ inactive_tab_font_style normal
 
 #: Advanced {{{
 
-shell /opt/homebrew/bin/nu
+shell /bin/zsh
 
 #: The shell program to execute. The default value of . means to use
 #: whatever shell is set as the default shell for the current user.
