--- a/ghostty/config
+++ b/ghostty/config
@@ -1,7 +1,22 @@
-font-family = MonaspiceNe Nerd Font Mono
+font-family = Monaspace Neon
 font-size = 12
+
+font-feature = calt
+font-feature = liga 
+font-feature = ss01
+font-feature = ss02
+font-feature = ss03
+font-feature = ss04
+font-feature = ss05
+font-feature = ss06
+font-feature = ss07
+font-feature = ss08
+font-feature = ss09
+
 theme = catppuccin-mocha
+
 background-opacity = 0.95
 background-blur-radius = 20
+
 macos-option-as-alt = left
 mouse-hide-while-typing = true
