--- a/zed/settings.json
+++ b/zed/settings.json
@@ -1,5 +1,5 @@
 {
-  "assistant": {
+  "agent": {
     "default_model": {
       "provider": "zed.dev",
       "model": "claude-3-5-sonnet-20240620"
