--- a/ghostty/config
+++ b/ghostty/config
@@ -13,7 +13,7 @@ font-feature = ss07
 font-feature = ss08
 font-feature = ss09
 
-theme = dark:catppuccin-mocha,light:catppuccin-latte
+theme = dark:Catppuccin Mocha,light:Catppuccin Latte
 
 background-opacity = 0.95
 background-blur-radius = 20
