--- a/ghostty/config
+++ b/ghostty/config
@@ -1,22 +1,10 @@
-font-family = Monaspace Neon
+font-family = Maple Mono
 font-size = 12
-
-font-feature = calt
-font-feature = liga 
-font-feature = ss01
-font-feature = ss02
-font-feature = ss03
-font-feature = ss04
-font-feature = ss05
-font-feature = ss06
-font-feature = ss07
-font-feature = ss08
-font-feature = ss09
 
 theme = dark:Catppuccin Mocha,light:Catppuccin Latte
 
-background-opacity = 0.95
-background-blur-radius = 20
+background-opacity = 0.65
+background-blur-radius = 30
 
 macos-option-as-alt = left
 mouse-hide-while-typing = true
